[package]
name = "demo"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = "0.18.0"
# actix-web = "4.9.0"
gdk4 = "0.9.0"
gdk4-sys = "0.9.0"
gio = "0.20.1"
gtk4 = "0.9.1"

libadwaita = "0.7.0"
libshumate = "0.6.0"
resource = "0.5.0"
# tera = "1.20.0"
